# raylib-game

./: .gitignore  CONVENTIONS.md  README.md  run.bat
src/: CMakeLists.txt  CMakePresets.json  animated_model.cxx  animated_model.h  logger.c  logger.cpp  logger.cxx  logger.h  main.c  main.cpp  main.cxx  player.cxx  player.h  player_camera_controller.cxx  player_camera_controller.h  settings.cxx  settings.h  state_manager.cxx  state_manager.h
src/resources/: monke.glb
src/resources/shaders/glsl/: fragment.fs  vertex.vs
src/shaders/: julia_set.fs
